[P4ADEV-2297] add param fileSize to updateExportFileStatus API
